--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,6 +45,8 @@
         {% block javascripts %}
             <script src="{{ asset('Js/appSliders.js')}}"></script>
             <script src="https://kit.fontawesome.com/4eb7898d29.js" crossorigin="anonymous"></script>
+            <script src="{{ asset('Js/appSeeMore.js')}}"></script>
+            <script src="{{ asset('Js/appModal.js')}}"></script>
         {% endblock %}
     </body>
 </html>
