--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,10 +18,10 @@
                     </a>
                 </figure>
                 <ul class="ul">
-                    <li><a href="">CAFÉES MOULUES</a></li>
-                    <li><a href="">CAFÉS EN GRAINS</a></li>
-                    <li><a href="">CAFÉS DOSSESTES</a></li>
-                    <li><a href="">CAFÉS CAPSULES</a></li>
+                    <li><a href="{{ path('app_categorie_cafees_moulues')}}">CAFÉES MOULUES</a></li>
+                    <li><a href="{{ path('app_categorie_cafes_grains')}}">CAFÉS EN GRAINS</a></li>
+                    <li><a href="{{ path('app_categorie_cafes_dossetes')}}">CAFÉS DOSSETES</a></li>
+                    <li><a href="{{ path('app_categorie_cafes_capsules')}}">CAFÉS CAPSULES</a></li>
                 </ul>
                 <div class="connexion">
                     <a href="">CONNEXION</a>
