--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -255,6 +255,7 @@
     width: 100%;
     flex-direction: column;
     justify-content: left;
+    margin-top: 2%;
 }
 
 .sousCardContainer{
@@ -603,8 +604,6 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: center;
-    padding: 2%;
     flex-wrap: wrap;
 }
 
@@ -620,4 +619,23 @@
     color: black;
     width: 100%;
     height: 100%;
+}
+
+/* ***************************************************DETAIL CATEGORIE PAGE********************************************************************** */
+.sousCardContainerDetail{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.cardLinkDetail{
+    text-decoration: none;
+    margin: 15px;
+    color: black;
+}
+
+.noArticle{
+    width: 100%;
+    text-align: center;
 }
