add register page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                 <div class="connexion">
                     <a href="">CONNEXION</a>
                     <span>/</span>
-                    <a href="">INSCRIPTION</a>
+                    <a href="{{ path('app_register')}}">INSCRIPTION</a>
                 </div>
                 <div class="cart">
                     <a href=""><i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i></a>
