connexion et inscription page

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -89,7 +89,7 @@
                     <option value="10">10</option>
                 </select>
             </div>
-            <a href="" class="btnAddPanier btn1">Ajouter au panier</a>
+            <a href="" class="btnAddPanier">Ajouter au panier</a>
         </div>
     </div>
     <div class="cardContainer">
