--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
                     <li><a href="{{ path('app_categorie_cafes_capsules')}}">CAFÉS CAPSULES</a></li>
                 </ul>
                 <div class="connexion">
-                    <a href="">CONNEXION</a>
+                    <a href="{{ path('app_login')}}">CONNEXION</a>
                     <span>/</span>
                     <a href="{{ path('app_register')}}">INSCRIPTION</a>
                 </div>
