--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -359,6 +359,7 @@
     font-size: 17px;
     width: 90%;
     height: 35px;
+    cursor: pointer;
     border-radius: 30px;
     transition: ease-out 0.4s;
     box-shadow: inset 0 0 0 0 white;
@@ -638,4 +639,114 @@
 .noArticle{
     width: 100%;
     text-align: center;
+}
+
+/* **********************************************************REGISTER PAGE**************************************************************************************** */
+.registerContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    flex-direction: column;
+    width: 100%;
+}
+
+.svgRegister{
+    position: absolute;
+    z-index: -1;
+}
+
+.svgRegister svg {
+    transform: translate(-320px, -60px);
+}
+.registerForm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 300px;
+    height: 500px;
+    border: #765827 solid 2px;
+    border-radius: 20px;
+    backdrop-filter: blur(4px);
+    background-color: rgba(255, 255, 255, 0);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.formRegister{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.formRegister div{
+    width: 80%;
+    margin-top: 2%;
+}
+
+.form{
+    border: 0;
+    width: 100%;
+    background: rgba(234, 198, 150, 0.34);
+    border-radius: 50px;
+    padding: 1%;
+    padding-left: 10px;
+    margin-top: 5%;
+    font-size: 18px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.btn {
+    margin-top: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #765827;
+    border: #765827 solid 2px;
+    color: white;
+    font-size: 18px;
+    width: 80%;
+    border-radius: 50px;
+    transition: ease-out 0.4s;
+    box-shadow: inset 0 0 0 0 white;
+    outline: none;
+    cursor: pointer;
+}
+
+.formCheck {
+    display: flex;
+    padding-top: 2%;
+    flex-direction: row-reverse;
+    font-size: 12px;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+}
+
+.formCheck input{
+    cursor: pointer;
+}
+
+.formCheck label {
+    padding-left: 5px;
+}
+
+.sousRegisterContainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.alert{
+    background-color: #FF8080;
+    padding: 1%;
+    border-radius: 5px;
+    border:	#8B0000 solid 2px;
+}
+
+.btn:hover{
+    box-shadow: inset 250px 0 0 0 white;
+    color: #765827;
 }
