--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -106,6 +106,29 @@
     width: 100%;
 }
 
+.dropdown{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    position: absolute;
+    display: none;
+    background-color: white;
+    background-color: #65451F;
+    border-radius: 15px;
+    z-index: 1;
+    padding: 12px 16px; 
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.dropdown-content a {
+    margin-bottom: 10px;
+    display: flex;
+}
+
 .cart a{
     text-decoration: none;
     color: white;
@@ -116,6 +139,10 @@
     justify-content: center;
     align-items: center;
 }
+
+.dropdown:hover .dropdown-content {
+    display: block;
+  }
 /* *********************************************HOMEPAGE************************************************* */
 .container{
     width: 100%;
@@ -345,6 +372,13 @@
     align-items: center;
     height: 200px;
     width: 10%;
+}
+
+.achat form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .btnAddPanier{
@@ -761,4 +795,129 @@
 
 .resetPasswordInfo{
     text-align: center;
+}
+
+/* **************************************************PANIER PAGE******************************************************************** */
+
+.listeArticlePanier {
+    width: 60%;
+    height: 85px;
+    background-color: #F4F4F4;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    flex-direction: row;
+    margin-bottom: 1%;
+    margin-top: 1%;
+}
+
+.middlePanier{
+    display: flex;
+    flex-direction: column;
+    margin-left: 1%;
+    width: 60%;
+    height: 100%;
+}
+
+.listeArticlePanierContainer{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-left: 2%;
+}
+
+.imgPanier {
+    width: auto;
+    height: 100%;
+}
+
+.imgPanier img{
+    width: 100%;
+    height: 85px;
+    border-radius: 20px 0px 0px 20px;
+    object-fit: cover;
+}
+
+.btnPanier{
+    display: flex;
+    flex-direction: row;
+    margin-top: 5px;
+}
+
+.btnPanierTrash {
+    width: 25px;
+    height: 25px;
+    display: flex;
+    border: #FF8080 solid 2px;
+    justify-content: center;
+    align-items: center;
+    background-color: #FF8080;
+    border-radius: 5px;
+    text-decoration: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 white;
+    outline: none;
+    color: #ffffff;
+    margin-left: 10px;
+}
+
+.btnPanierLess {
+    width: 25px;
+    height: 25px;
+    display: flex;
+    border: #95BDFF solid 2px;
+    justify-content: center;
+    align-items: center;
+    background-color: #95BDFF;
+    border-radius: 5px;
+    text-decoration: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 white;
+    outline: none;
+    color: #ffffff;
+    margin-left: 10px;
+}
+
+.btnPanierPlus {
+    width: 25px;
+    height: 25px;
+    display: flex;
+    border: #B5CB99 solid 2px;
+    justify-content: center;
+    align-items: center;
+    background-color: #B5CB99;
+    border-radius: 5px;
+    text-decoration: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 white;
+    outline: none;
+    color: #ffffff;
+}
+
+.prixArticlePanier{
+    width: 40%;
+    display: flex;
+    justify-content: end;
+    margin-right: 2%;
+    color: #765827;
+    font-size: 40px;
+}
+
+.btnPanierTrash:hover{
+    box-shadow: inset 25px 0 0 0 white;
+    color: #FF8080;
+}
+
+.btnPanierLess:hover{
+    box-shadow: inset 25px 0 0 0 white;
+    color: #95BDFF;
+}
+
+.btnPanierPlus:hover{
+    box-shadow: inset 25px 0 0 0 white;
+    color: #B5CB99;
 }
