--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -32,6 +32,7 @@
             {% endfor %}
         </div>
         <div class="achat">
+            <h2>Total</h2>
             <span class="prix"> {{ total }} €</span>
             <a href="" class="btnAddPanier">Commander</a>
             <a href="{{ path('empty_cart')}}" class="descriptif">vider le panier</a>
