--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -115,13 +115,41 @@
 .dropdown-content {
     position: absolute;
     display: none;
-    background-color: white;
     background-color: #65451F;
     border-radius: 15px;
     z-index: 1;
     padding: 12px 16px; 
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.dropdown-cart{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+
+.cart-dropdown-content{
+    position: absolute;
+    display: none;
+    border: #65451F solid 3px;
+    background-color: white;
+    border-radius: 15px;
+    padding: 10px;
+    z-index: 2;
+    right: 10%;
+    width: 400px;
+    height: 200px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.panierVide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .dropdown-content a {
@@ -134,15 +162,60 @@
     color: white;
 }
 
+.panierHover {
+    display: flex;
+    flex-direction: row;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.panierHoverImg img {
+    width: 85px;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px 0px 0px 10px;
+}
+
+.panierHoverInfos{
+    display: flex;
+    flex-direction: column;
+    padding-left: 5px;
+    color: black;
+}
+
+.panierLastArt {
+    color: black;
+}
+
+.prixArticlePanierHover {
+    display: flex;
+    justify-content: end;
+    width: 50%;
+    align-items: center;
+    color: #765827;
+}
+
+.panierHoverTotal {
+    display: flex;
+    flex-direction: column;
+}
+
 .footer{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content{
     display: block;
-  }
+}
+
+.dropdown-cart:hover .cart-dropdown-content {
+    display: block;
+}
+
 /* *********************************************HOMEPAGE************************************************* */
 .container{
     width: 100%;
