--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,22 +48,23 @@
                         <div class="cart-dropdown-content">
                             <a href="{{ path('app_cart')}}">
                                 {% if lastData is not empty %}
+                                {{ dump(lastData) }}
                                     <span class="panierLastArt">Votre dernier article mis dans le panier:</span>
                                     <div class="panierHover">
                                         <figure class="panierHoverImg">
-                                            <img src="{{ lastData.article.image}}" alt="{{ lastData.article.libelle}}">
+                                            {# <img src="{{ lastData['article'].image }}" alt="{{ lastData.article.libelle}}"> #}
                                         </figure>
                                         <div class="panierHoverInfos">
-                                            <span>{{lastData.article.libelle}}</span>
-                                            <span>quantité: {{ lastData.quantite }}</span>
+                                            {# <span>{{lastData.article.libelle}}</span> #}
+                                            {# <span>quantité: {{ lastData.quantite }}</span> #}
                                         </div>
                                         <div class="prixArticlePanierHover">
-                                            <span>{{ lastData.article.prix * lastData.quantite }} €</span>
+                                            {# <span>{{ lastData.article.prix * lastData.quantite }} €</span> #}
                                         </div>
                                     </div>
                                     <div class="panierHoverTotal">
-                                        <span class="panierLastArt">Nombre d'article dans le panier: {{ lastData | length }}</span>
-                                        <span class="panierLastArt">Total: {{total}}€</span>
+                                        <span class="panierLastArt">Nombre d'article dans le panier: </span>
+                                        {# <span class="panierLastArt">Total: {{total}}€</span> #}
                                     </div>
                                 {% else %}
                                     <div class="panierVide">
